fix gap

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,7 +26,7 @@
   justify-content: space-evenly;
   align-items: center;
   min-height: calc(100vh - 5rem);
-  gap: 4rem;
+  gap: 1rem;
 }
 
 .hero h2 {
@@ -68,6 +68,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 4rem;
   }
   .hero h2 {
     font-size: 2.5rem;
